seo: add meta tags to optimize seo

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,87 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Milan White</title>
+    <title>Milan White | Full Stack Software Developer</title>
+    <meta
+      name="description"
+      content="Portfolio of Milan White, a full-stack software developer and University of Toronto CS & Statistics student. Projects, experience, and contact."
+    />
+    <meta
+      name="keywords"
+      content="Milan White, full stack software developer, software engineer, portfolio, React, TypeScript, Flask, PostgreSQL, University of Toronto"
+    />
+    <meta name="author" content="Milan White" />
+    <meta
+      name="robots"
+      content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1"
+    />
+    <meta
+      name="googlebot"
+      content="index,follow,max-image-preview:large,max-snippet:-1,max-video-preview:-1"
+    />
+    <meta name="theme-color" content="#121212" />
+    <meta name="color-scheme" content="dark" />
+    <meta name="application-name" content="Milan White Portfolio" />
+    <meta name="apple-mobile-web-app-title" content="Milan White" />
+
+    <link rel="canonical" href="https://www.milanwhite.com/" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Milan White" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:title" content="Milan White | Full Stack Software Developer" />
+    <meta
+      property="og:description"
+      content="Portfolio of Milan White, a full-stack software developer and University of Toronto CS & Statistics student. Projects, experience, and contact."
+    />
+    <meta property="og:url" content="https://www.milanwhite.com/" />
+    <meta property="og:image" content="https://www.milanwhite.com/og-image.webp" />
+    <meta property="og:image:alt" content="Portrait of Milan White" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Milan White | Full Stack Software Developer" />
+    <meta
+      name="twitter:description"
+      content="Portfolio of Milan White, a full-stack software developer and University of Toronto CS & Statistics student. Projects, experience, and contact."
+    />
+    <meta name="twitter:image" content="https://www.milanwhite.com/og-image.webp" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@graph": [
+          {
+            "@type": "WebSite",
+            "@id": "https://www.milanwhite.com/#website",
+            "url": "https://www.milanwhite.com/",
+            "name": "Milan White",
+            "description": "Portfolio of Milan White, a full-stack software developer and University of Toronto CS & Statistics student. Projects, experience, and contact.",
+            "inLanguage": "en-US",
+            "publisher": { "@id": "https://www.milanwhite.com/#person" }
+          },
+          {
+            "@type": "Person",
+            "@id": "https://www.milanwhite.com/#person",
+            "name": "Milan White",
+            "url": "https://www.milanwhite.com/",
+            "image": "https://www.milanwhite.com/og-image.webp",
+            "jobTitle": "Full Stack Software Developer",
+            "description": "Portfolio of Milan White, a full-stack software developer and University of Toronto CS & Statistics student.",
+            "email": "mailto:milan.white.25@gmail.com",
+            "sameAs": [
+              "https://github.com/MilanWhite",
+              "https://www.linkedin.com/in/milan-white"
+            ],
+            "affiliation": {
+              "@type": "CollegeOrUniversity",
+              "name": "University of Toronto"
+            }
+          }
+        ]
+      }
+    </script>
   </head>
   <body style="background: #121212">
     <div id="root"></div>
